projetGL/src/test/deca/codegen/invalid/test_div_overflow_negatif.deca
// Description :
//    Test de la division par un très petit nombre negatif
//
// Resultats:
//    Erreur : Débordement floattant
{
    println (4/-4.0E-40);
}